--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "~15.0.4",
     "@angular/platform-browser-dynamic": "~15.0.4",
     "@angular/router": "~15.0.4",
+    "@ngrx/effects": "^15.0.0",
+    "@ngrx/store": "^15.0.0",
+    "@ngrx/store-devtools": "^15.0.0",
     "ngx-custom-form-error": "0.0.2",
     "ngx-form-error": "^1.1.3",
     "rxjs": "~7.6.0",
@@ -29,6 +32,6 @@
     "@angular/cli": "^15.0.4",
     "@angular/compiler-cli": "~15.0.4",
     "@types/node": "^18.11.15",
-    "typescript": "~4.9.4"
+    "typescript": "~4.8.4"
   }
 }
